--- a/public/06-service.html
+++ b/public/06-service.html
@@ -16,6 +16,12 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<style>
+			.menu-mobile:not(.active){
+				visibility: hidden;
+			}
+			
+		</style>
 	</head>
 	<body>
 		<div class="main-wrapper">
@@ -414,11 +420,6 @@
 										</div>
 										<div class="sService__caption">Автоматизация процессов регистрации, квалификации, сегментации, а&nbsp;также контроль эффективности поставщиков. Управление данными о&nbsp;поставщиках, их&nbsp;KPI, финансовой документацией, сертификатами и&nbsp;прочей информацией.
 										</div>
-										<a class="sService__link" href="#"><span>Подробнее</span>
-											<svg class="icon icon-arrow-right-link ">
-												<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-											</svg>
-										</a>
 									</div>
 								</div>
 								<div class="col-md">
@@ -427,11 +428,6 @@
 										</div>
 										<div class="sService__caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto aliquam tenetur accusamus! Illum quod eius praesentium quisquam quis totam corporis necessitatibus unde dolorum? Commodi, dolore!
 										</div>
-										<a class="sService__link" href="#"><span>Подробнее</span>
-											<svg class="icon icon-arrow-right-link ">
-												<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-											</svg>
-										</a>
 									</div>
 								</div>
 					</div>
