--- a/public/09-subspecies-services.html
+++ b/public/09-subspecies-services.html
@@ -16,6 +16,12 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<style>
+			.menu-mobile:not(.active){
+				visibility: hidden;
+			}
+			
+		</style>
 	</head>
 	<body>
 		<div class="main-wrapper">
@@ -293,16 +299,6 @@
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
 								</div>
-								<div class="sService__link sService__link--left d-none d-md-inline-block">
-									<svg class="icon icon-arrow-left-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
-									</svg>
-								</div>
-								<div class="sService__link sService__link--left d-inline-block d-md-none">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
 							</a>
 						</div>
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
@@ -312,11 +308,6 @@
 								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
 								</div>
 							</a>
 						</div>
@@ -336,11 +327,6 @@
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
 								</div>
-								<div class="sService__link sService__link--single">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
 							</a>
 						</div>
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
@@ -351,11 +337,6 @@
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
 								</div>
-								<div class="sService__link sService__link--single">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
 							</a>
 						</div>
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
@@ -365,11 +346,6 @@
 								<div class="sService__caption">Управление программой IT-деятельности компании на базе SAP BPC NW
 								</div>
 								<div class="sService__subtext">Финансы, Управление цепочками поставок
-								</div>
-								<div class="sService__link sService__link--single">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
 								</div>
 							</a>
 						</div>
