--- a/public/13-article.html
+++ b/public/13-article.html
@@ -16,6 +16,12 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<style>
+			.menu-mobile:not(.active){
+				visibility: hidden;
+			}
+			
+		</style>
 	</head>
 	<body>
 		<div class="main-wrapper">
@@ -214,6 +220,18 @@
 					</div>
 				</div>
 				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
+					<div class="row">
+						<div class="col-lg-6">
+							<div class="sContent__mediaContent mb-4"><img class="object-fit-js" src="img/article-img-1.jpg" alt="" loading="lazy"/>
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<p class="h4 mb-32">Donec pellentesque efficitur dui, id&nbsp;dictum ex&nbsp;aliquam&nbsp;id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a&nbsp;sed est.</p>
+							<p class="fw-light mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+						</div>
+					</div>
+				</div>
+				<div class="container container--small mb-56" data-aos="fade-up" data-aos-delay="300">
 					<p class="h4 mb-32">Donec pellentesque efficitur dui, id&nbsp;dictum ex&nbsp;aliquam&nbsp;id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a&nbsp;sed est.</p>
 					<p class="fw-light mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
@@ -362,16 +380,6 @@
 								</div>
 								<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
 								</div>
-								<div class="sService__link sService__link--left d-none d-md-inline-block">
-									<svg class="icon icon-arrow-left-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
-									</svg>
-								</div>
-								<div class="sService__link sService__link--left d-inline-block d-md-none">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
 							</a>
 						</div>
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
@@ -379,11 +387,6 @@
 								<div class="sService__title">6 сентября 2022
 								</div>
 								<div class="sService__caption">Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.
-								</div>
-								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
 								</div>
 							</a>
 						</div>
