--- a/public/404.html
+++ b/public/404.html
@@ -16,13 +16,19 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<style>
+			.menu-mobile:not(.active){
+				visibility: hidden;
+			}
+			
+		</style>
 	</head>
 	<body>
 		<div class="main-wrapper">
 			<!-- start s404-->
 			<section class="s404 section bg-wrap" id="s404"><img class="object-fit-js picture-bg" src="img/404-bg-1.jpg" alt="" loading="lazy"/>
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
-				<h1>404</h1><img class="picture" src="img/404-bg-2.jpg" alt=""/>
+				<h1>404</h1><img class="picture" src="img/404-bg-2.png" alt=""/>
 				<div class="s404__text">
 					<p>Страница не найдена. Она не существовала или срок публикации истёк.</p><a class="btn" href="#">На главную</a>
 				</div>
