--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,12 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<style>
+			.menu-mobile:not(.active){
+				visibility: hidden;
+			}
+			
+		</style>
 	</head>
 	<body class="main-page page-fixed-video">
 		<div class="main-wrapper">
@@ -429,23 +435,23 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие
+											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами
+											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность
+											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бизнес-планирование и бюджетирование
+											<li> <a href="#"><span>Бизнес-планирование и бюджетирование&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI
+											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -453,7 +459,7 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Налоговый мониторинг
+											<li> <a href="#"><span>Налоговый мониторинг&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -472,23 +478,23 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие
+											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами
+											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность
+											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бизнес-планирование и бюджетирование
+											<li> <a href="#"><span>Бизнес-планирование и бюджетирование&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI
+											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -496,7 +502,7 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Налоговый мониторинг
+											<li> <a href="#"><span>Налоговый мониторинг&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -515,23 +521,23 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие
+											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами
+											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность
+											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бизнес-планирование и бюджетирование
+											<li> <a href="#"><span>Бизнес-планирование и бюджетирование&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI
+											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -539,7 +545,7 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Налоговый мониторинг
+											<li> <a href="#"><span>Налоговый мониторинг&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -558,23 +564,23 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие
+											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами
+											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность
+											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бизнес-планирование и бюджетирование
+											<li> <a href="#"><span>Бизнес-планирование и бюджетирование&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI
+											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -582,7 +588,7 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Налоговый мониторинг
+											<li> <a href="#"><span>Налоговый мониторинг&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -601,23 +607,23 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие
+											<li> <a href="#"><span>Бухгалтерский учёт и финансовое закрытие&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами
+											<li> <a href="#"><span>Управление дебиторской задолженностью, счетами и&nbsp;доходами&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность
+											<li> <a href="#"><span>Корпоративное управление, риски  и&nbsp;кибербезопасность&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Бизнес-планирование и бюджетирование
+											<li> <a href="#"><span>Бизнес-планирование и бюджетирование&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI
+											<li> <a href="#"><span>Отчетность и&nbsp;управление по&nbsp;KPI&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
@@ -625,7 +631,7 @@
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
-											<li> <a href="#"><span>Налоговый мониторинг
+											<li> <a href="#"><span>Налоговый мониторинг&nbsp;
 														<svg class="icon icon-chevron-right ">
 															<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
 														</svg></span></a></li>
