--- a/public/03-status.html
+++ b/public/03-status.html
@@ -16,6 +16,12 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<style>
+			.menu-mobile:not(.active){
+				visibility: hidden;
+			}
+			
+		</style>
 	</head>
 	<body>
 		<div class="main-wrapper">
