--- a/public/13-article-2.html
+++ b/public/13-article-2.html
@@ -16,6 +16,12 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="libs/aos/aos.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
+		<style>
+			.menu-mobile:not(.active){
+				visibility: hidden;
+			}
+			
+		</style>
 	</head>
 	<body>
 		<div class="main-wrapper">
@@ -372,16 +378,6 @@
 								</div>
 								<div class="sService__caption">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo.
 								</div>
-								<div class="sService__link sService__link--left d-none d-md-inline-block">
-									<svg class="icon icon-arrow-left-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-left-link"></use>
-									</svg>
-								</div>
-								<div class="sService__link sService__link--left d-inline-block d-md-none">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
-								</div>
 							</a>
 						</div>
 						<div class="col-md" data-aos="fade-up" data-aos-delay="300">
@@ -391,11 +387,6 @@
 								<div class="sService__online">online
 								</div>
 								<div class="sService__caption">Nam non aliquam magna. Etiam et consectetur purus posuere tempor massa. Vestibulum viverra luctus posuere.
-								</div>
-								<div class="sService__link sService__link--right">
-									<svg class="icon icon-arrow-right-link ">
-										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
-									</svg>
 								</div>
 							</a>
 						</div>
