--- a/public/12-offices.html
+++ b/public/12-offices.html
@@ -206,7 +206,7 @@
 			</div>
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
-			<div class="headerBlock bg-wrap section" id="headerBlock">
+			<div class="headerBlock bg-wrap section bg-dark section section--vh" id="headerBlock">
 				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
 				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockOffices-bg.jpg" alt=""/>
 				</div>
