--- a/public/02-about.html
+++ b/public/02-about.html
@@ -226,7 +226,7 @@
 			<!-- end headerBlock-->
 			<!-- start sAboutPerson-->
 			<div class="sAboutPerson section bg-white section section--vh" id="sAboutPerson">
-				<div class="sAboutPerson__img"><img src="img/person-about.jpg" alt=""/>
+				<div class="sAboutPerson__img"><img src="img/director.png" alt=""/>
 				</div>
 				<div class="sAboutPerson__text-block">
 					<h2>Миссия и ценности</h2>
@@ -640,6 +640,116 @@
 										</a>
 									</div>
 								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -660,6 +770,26 @@
 								</div>
 								<div class="sExpert__pagination-item swiper-slide">
 									<div class="sExpert__pagination-title">2019 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
 									</div>
 								</div>
 								<div class="sExpert__pagination-item swiper-slide">
