--- a/public/03-status.html
+++ b/public/03-status.html
@@ -418,6 +418,116 @@
 										</a>
 									</div>
 								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
+								<div class="sExpert__slide swiper-slide">
+									<div class="sExpert__item">
+										<div class="sExpert__year">2018 г.
+										</div>
+										<div class="sExpert__logo"><img src="img/svg/expert-logo-2.svg" alt=""/>
+										</div>
+										<div class="sExpert__type sExpert__type--bronze">
+											<svg class="icon icon-medal ">
+												<use xlink:href="img/svg/sprite.svg#medal"></use>
+											</svg><span>Бронза, Проекты SuccessFactors</span>
+										</div>
+										<div class="sExpert__title-project">Проект
+										</div>
+										<div class="sExpert__project-name">Разработка и&nbsp;внедрение системы бюджетирования
+										</div>
+										<a class="sExpert__link" href="#"><span>О проекте</span>
+											<svg class="icon icon-chevron-right ">
+												<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+											</svg>
+										</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -438,6 +548,26 @@
 								</div>
 								<div class="sExpert__pagination-item swiper-slide">
 									<div class="sExpert__pagination-title">2019 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
+									</div>
+								</div>
+								<div class="sExpert__pagination-item swiper-slide">
+									<div class="sExpert__pagination-title">2018 г.
 									</div>
 								</div>
 								<div class="sExpert__pagination-item swiper-slide">
