edit 15-search-result page

--- a/public/15-search-result-2.html
+++ b/public/15-search-result-2.html
@@ -213,11 +213,13 @@
 				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockSearch-bg-mob.jpg" alt=""/>
 				</div>
 				<div class="container" data-aos="fade-up" data-aos-delay="300">
-					<div class="headerBlock__input-wrap form-group"><input class="headerBlock__input form-control" name="text" type="text" placeholder="Поиск"/><span class="headerBlock__input-title"></span>
-						<svg class="icon icon-search ">
-							<use xlink:href="img/svg/sprite.svg#search"></use>
-						</svg>
-						<p>Найдено 27 результатов</p>
+					<div class="headerBlock__input-wrap form-group"><input class="headerBlock__input form-control" name="text" type="text" placeholder="Поиск" value="ДЛОАЩУП"/><span class="headerBlock__input-title"></span>
+						<button class="btn" type="button">
+							<svg class="icon icon-search ">
+								<use xlink:href="img/svg/sprite.svg#search"></use>
+							</svg>
+						</button>
+						<p>Найдено 0 результатов</p>
 						<div class="headerBlock__found"><a href="#">Управление поставщиками</a><a href="#">Управление жизненным циклом продукции</a><a href="#">Управление активами предприятия</a><a href="#">Управление поставщиками и предприятиями</a>
 						</div>
 					</div>
@@ -229,10 +231,74 @@
 				<div class="container tabs">
 					<div class="sSearchResult__slider sSearchResult__slider--js swiper" data-aos="fade-up" data-aos-delay="300">
 						<div class="swiper-wrapper tabs__caption">
-							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn active">
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
 								<div class="sSearchResult__item">По тегу
 								</div>
 							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
+								<div class="sSearchResult__item">Услуги
+								</div>
+							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
+								<div class="sSearchResult__item">Направления
+								</div>
+							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
+								<div class="sSearchResult__item">Технологии
+								</div>
+							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
+								<div class="sSearchResult__item">Подходы
+								</div>
+							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
+								<div class="sSearchResult__item">Новости
+								</div>
+							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
+								<div class="sSearchResult__item">Публикации
+								</div>
+							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn">
+								<div class="sSearchResult__item">Мероприятия
+								</div>
+							</div>
+							<div class="sSearchResult__slide swiper-slide btn-aos-refresh tabs__btn active">
+								<div class="sSearchResult__item">Проекты
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
+						</div>
+					</div>
+					<div class="tabs__content">
+						<div class="sSearchResult__nothing">Извините, по вашему запросу ничего не найдено. Измените поисковый запрос
 						</div>
 					</div>
 					<div class="tabs__content active">
