--- a/public/15-search-result.html
+++ b/public/15-search-result.html
@@ -214,9 +214,11 @@
 				</div>
 				<div class="container" data-aos="fade-up" data-aos-delay="300">
 					<div class="headerBlock__input-wrap form-group"><input class="headerBlock__input form-control" name="text" type="text" placeholder="Поиск"/><span class="headerBlock__input-title"></span>
-						<svg class="icon icon-search ">
-							<use xlink:href="img/svg/sprite.svg#search"></use>
-						</svg>
+						<button class="btn" type="button">
+							<svg class="icon icon-search ">
+								<use xlink:href="img/svg/sprite.svg#search"></use>
+							</svg>
+						</button>
 						<p>Найдено 27 результатов</p>
 						<div class="headerBlock__found"><a href="#">Управление поставщиками</a><a href="#">Управление жизненным циклом продукции</a><a href="#">Управление активами предприятия</a><a href="#">Управление поставщиками и предприятиями</a>
 						</div>
