--- a/public/03-status.html
+++ b/public/03-status.html
@@ -257,6 +257,8 @@
 							<h2>Признание экспертного сообщества&nbsp;SAP</h2>
 							<h6>Ежегодно мы&nbsp;заявляем на&nbsp;конкурс SAP Quality Aword выполненные нами проекты, которые обеспечили заказчикам значительные преимущества на&nbsp;рынке за&nbsp;счет повышения эффективности бизнес-процессов</h6>
 						</div>
+				</div>
+				<div class="slider-hover container">
 					<div class="sExpert__slider-wrap">
 						<div class="sExpert__slider sExpert__slider--js swiper">
 							<div class="swiper-wrapper">
@@ -530,7 +532,21 @@
 								</div>
 							</div>
 						</div>
+						<div class="d-none d-md-block">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-chevron-left ">
+									<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-chevron-right ">
+									<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+								</svg>
+							</div>
+						</div>
 					</div>
+				</div>
+				<div class="container">
 					<div class="sExpert__slider-pagination-wrap">
 						<div class="sExpert__slider-pagination sExpert__slider-pagination--js swiper">
 							<div class="swiper-wrapper">
