--- a/public/11-case.html
+++ b/public/11-case.html
@@ -344,7 +344,9 @@
 			<!-- end sService-->
 			<!-- start sForm-->
 			<section class="sForm section bg-dark section section--vh" id="sForm">
-				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<picture class="animate-blur"> 
+					<source srcset="img/@2x/webp/animate-blur.webp" type="image/webp"/><img src="img/@2x/animate-blur.png" alt=""/>
+				</picture>
 				<div class="container">
 					<div class="form-wrap">
 						<form>
