--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -207,7 +207,9 @@
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
 			<div class="headerBlock bg-wrap section bg-dark section section--vh" id="headerBlock">
-				<div class="animate-blur animate-blur--right"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<picture class="animate-blur animate-blur--right"> 
+					<source srcset="img/@2x/webp/animate-blur.webp" type="image/webp"/><img src="img/@2x/animate-blur.png" alt=""/>
+				</picture>
 				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockPressCenter-bg.jpg" alt=""/>
 				</div>
 				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockPressCenter-bg-mob.jpg" alt=""/>
