--- a/public/06-service.html
+++ b/public/06-service.html
@@ -207,7 +207,9 @@
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
 			<div class="headerBlock bg-wrap section bg-dark section section--vh" id="headerBlock">
-				<div class="animate-blur animate-blur--right"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<picture class="animate-blur animate-blur--right"> 
+					<source srcset="img/@2x/webp/animate-blur.webp" type="image/webp"/><img src="img/@2x/animate-blur.png" alt=""/>
+				</picture>
 				<div class="headerBlock__bg picture-bg"><img src="img/headerBlockService1-bg.jpg" alt=""/>
 				</div>
 				<div class="headerBlock__bg headerBlock__bg--mob picture-bg"><img src="img/headerBlockService1-bg-mob.jpg" alt=""/>
@@ -436,7 +438,9 @@
 			<!-- end sService-->
 			<!-- start sForm-->
 			<section class="sForm section bg-dark section section--vh" id="sForm">
-				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<picture class="animate-blur"> 
+					<source srcset="img/@2x/webp/animate-blur.webp" type="image/webp"/><img src="img/@2x/animate-blur.png" alt=""/>
+				</picture>
 				<div class="container">
 					<div class="form-wrap">
 						<form>
