--- a/public/404.html
+++ b/public/404.html
@@ -27,7 +27,9 @@
 		<div class="main-wrapper">
 			<!-- start s404-->
 			<section class="s404 section bg-wrap" id="s404"><img class="object-fit-js picture-bg" src="img/404-bg-1.jpg" alt="" loading="lazy"/>
-				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<picture class="animate-blur"> 
+					<source srcset="img/@2x/webp/animate-blur.webp" type="image/webp"/><img src="img/@2x/animate-blur.png" alt=""/>
+				</picture>
 				<h1>404</h1><img class="picture" src="img/404-bg-2.png" alt=""/>
 				<div class="s404__text">
 					<p>Страница не найдена. Она не существовала или срок публикации истёк.</p><a class="btn" href="#">На главную</a>
