--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,9 @@
 			<!-- end top-nav-->
 			<!-- start headerBlock-->
 			<div class="headerBlock section bg-dark section section--vh" id="headerBlock">
-				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<picture class="animate-blur"> 
+					<source srcset="img/@2x/webp/animate-blur.webp" type="image/webp"/><img src="img/@2x/animate-blur.png" alt=""/>
+				</picture>
 				<div class="container">
 					<div class="headerBlock__inner">
 						<div class="headerBlock__title-block" data-aos="fade-up" data-aos-delay="300">
@@ -893,7 +895,9 @@
 			<!-- end sJoin-->
 			<!-- start sForm-->
 			<section class="sForm section bg-dark section section--vh" id="sForm">
-				<div class="animate-blur"><img src="img/@2x/webp/animate-blur.webp" alt=""/></div>
+				<picture class="animate-blur"> 
+					<source srcset="img/@2x/webp/animate-blur.webp" type="image/webp"/><img src="img/@2x/animate-blur.png" alt=""/>
+				</picture>
 				<div class="container">
 					<div class="form-wrap">
 						<form>
